# SimuGlue

./: DEV.md  LICENSE  README.md  pyproject.toml
examples/cij_hbn_lmp/: _hbn_potential.mod  auto.sh  cij_2d.yaml  clean.sh  in.data  in.template  tmp.supercell.xyz
examples/cij_hbn_qe/: README.md  cfg.yaml  hbn.in  test_parse_post.py
examples/cij_mos2_qe/: auto.sh  cij_2d.yaml  test_parse_post.py
examples/cij_si_lmp/: auto.sh  cij_2d.yaml  cij_3d.yaml  test_parse_post.py
examples/deform_graphene_lmp/: _graphene_potential.mod  auto.sh  deform_2d.yaml  in.template  tmp.basis.xyz  tmp.supercell.xyz  tmp.types
examples/deform_hbn_lmp/: auto.sh  deform_2d.yaml  in.template  tmp.basis.xyz  tmp.supercell.xyz  tmp.types
examples/qe_xyz_def_qe/: README.md  auto.sh  i.hbn.in  o.defgrad  o.hbn.xyz  o.hbn_def.in  o.hbn_def.xyz
examples/run_cij_01_lammps/: cij_2d.yaml  run_cij.py
examples/run_cij_hbn_qe/: cfg.yaml  hbn.in  run_all.py
examples/run_cij_lammps/: _potential.mod  auto.sh  cij.json  cij.yaml  cij_2d.yaml  cij_3d.yaml  clean.sh  in.data  in.template  run_cij.py  test_cij.py
examples/run_cij_qe/: MoS2_qe.in  cij_2d.yaml  header.in  (+1 more)
tests/: _utils.py  conftest.py  test_build_lmp_topo.py  test_build_supercell.py  test_build_supercell_incr_array.py  test_build_supercell_order.py  test_cij_markers.py  test_cij_post_synthetic.py  test_cij_workflow_unit.py  test_cli_mech_defgrad.py  test_cycle_pwi-json-xyz.py  test_cycle_pwi-json-xyz_geom2pwi.py  test_io_aseconv_qe_out.py  test_io_aseconv_smoke.py  test_io_nepconv.py  test_io_supercell.py  test_json2xyz_cli.py  test_lammps_cell.py  test_lammps_data_type_table.py  test_lammps_topo_roundtrip.py  test_lmp_phonon_dispersion.py  test_lmp_phonon_dispersion_bad_basis.py  test_lmp_phonon_dispersion_cli.py  test_lmp_phonon_dispersion_edge_cases.py  test_lmp_phonon_dispersion_reorder_auto_none_behavior.py  test_lmp_phonon_dispersion_scrambled_ids_order.py  test_lmp_topo_attach_arrays.py  test_lmp_topo_attach_arrays_requires_types.py  test_lmp_topo_cli.py  test_lmp_topo_cli_options_matrix.py  test_lmp_topo_cli_v2.py  test_lmp_topo_core_atom_tag_edge_cases.py  test_lmp_topo_export_types.py  test_lmp_topo_infer.py  test_lmp_topo_infer_bonds_edge_cases.py  test_lmp_topo_signed_dihedral.py  test_lmp_topo_topology_infer.py  test_lmp_topo_topology_typing.py  test_lmp_topo_triclinic_topology_inference.py  test_lmp_topo_typing.py  (+25 more)
tools/: argcompletion-install.sh  dev-install.sh  install_completion.sh  install_completion_v2.sh
(+570 files in other folders)
