[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simuglue"
version = "0.0.1"
description = "SIMUlation GLUE — General Lab Utility Engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Aristotelis P. Sgouros", email = "asgouros@eie.gr"}
]

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "ase>=3.26.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pyyaml>=6.0",
]

[project.scripts]
sgl = "simuglue.cli.main:main"
sgl-hello = "simuglue.cli.template_cli:main"
sgl-pwi2json = "simuglue.cli.pwi2json_cli:main"
sgl-pwo2json = "simuglue.cli.pwo2json_cli:main"
sgl-json2xyz = "simuglue.cli.json2xyz_cli:main"
sgl-xyz2qe = "simuglue.cli.xyz2qe_cli:main"
sgl-transf-xyz = "simuglue.cli.transf_xyz_cli:main"
sgl-transf-lammps = "simuglue.cli.transf_lammps_cli:main"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
