[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simuglue"
version = "0.0.1"
description = "SIMUlation GLUE — General Lab Utility Engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Aristotelis P. Sgouros", email = "asgouros@eie.gr"}
]

dependencies = [
  "numpy>=2.0",
  "scipy>=1.13",
  "pandas>=2.0",
  "ase>=3.26.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pyyaml>=6.0",
  "argcomplete>=3.1",
]
cli = [
  "argcomplete>=3.1",
]

[project.scripts]
sgl = "simuglue.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

